--- a/about/style.css
+++ b/about/style.css
@@ -1,5 +1,6 @@
 /*put images to scrollable row*/
 body {
+    scroll-behavior: smooth;
     overflow-x: auto;
     white-space: nowrap;
     margin: 0 auto;
@@ -9,8 +10,6 @@ body {
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.075) inset;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 body img {
